// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPortal should auto remove root 1`] = `
<body>
  <div />
</body>
`;

exports[`createPortal should not render child 1`] = `
<body>
  <div
    id="react-cool-portal"
  />
  <div />
</body>
`;

exports[`createPortal should render correctly 1`] = `
<body>
  <div />
  <div
    id="react-cool-portal"
  >
    <div
      data-testid="test"
    >
      Test
    </div>
  </div>
</body>
`;
